[gd_scene load_steps=6 format=2]

[ext_resource path="res://Canvas Layers/GUI.gd" type="Script" id=1]
[ext_resource path="res://Images/HUD/Pause.png" type="Texture" id=2]
[ext_resource path="res://Images/HUD/HeartFull.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Oswald-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[node name="GUI" type="CanvasLayer" groups=[
"GUI",
]]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = -640.0
margin_right = 328.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LiveCount" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 507.0
margin_top = 1224.0
margin_right = -53.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 535.0
margin_top = 1243.0
margin_right = -26.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/HBoxContainer"]
position = Vector2( 10.301, 11.9828 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Control/HBoxContainer"]
position = Vector2( 37.6301, 11.9828 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Control/HBoxContainer"]
position = Vector2( 64.3286, 11.9028 )
texture = ExtResource( 3 )

[node name="PauseButton" type="TextureButton" parent="Control"]
margin_right = 135.0
margin_bottom = 159.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/PauseButton" to="." method="_on_PauseButton_pressed"]
